code added to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,6 @@
-language: python
-python:
-  - "2.6"
-  - "2.7"
-  - "3.2"
-  - "3.3"
-  - "3.4"
-  - "3.5"
-# command to install dependencies
-install: "pip install -r requirements.txt"
-# command to run tests
-script: nosetests
+before_install : ./before_install.sh
+    
+install : ./install.sh
 
-after_script:
-    - echo "after script was run"
+after_success:
+    - echo "install was a success"
